# c

./: CMakeLists.txt  README.md  main.c  utils.c  utils.h
include/: app.h  io.h
src/: app.cpp  io.cpp  main.c  main.cpp  quadratic.cpp
src/solveQuadratic/: solveQuadratic.c  solveQuadratic.cpp  solveQuadratic.h
src/solveQuadratic/test/: readyTestsQuadratic.cpp  testQuadratic.cpp  testQuadratic.h
src/solveQuadratic/testQuadratic/: readyTestsQuadratic.c  readyTestsQuadratic.cpp  readyTestsQuadratic.h  testQuadratic.c  testQuadratic.cpp
src/solver/: solver.c  solver.cpp  solver.h
src/solverQE/: solverQE.c  solverQE.h
src/utils/: utils.c  utils.h
src/utils/testQE/: readyTestsQE.c  readyTestsQE.h  testQE.c  testQE.h
test/: testQuadratic.cpp  testQuadratic.h
